# nn-multiclass-classification

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: publish.yml
src/: App.tsx  confusionMatrix.tsx  constants.ts  generate2D.tsx  heatmap.jsx  linechart.jsx  settings.ts  state.ts  testpoints.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/nn/: activation_functions.rs  layer.rs  mod.rs  neuron.rs
